# common-repo

./: .commitlintrc.yml  .common-repo.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tarpaulin.toml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  Cargo.toml  DEVIN.md  DOCTEST_PLAN.md  GEMINI.md  IMPLEMENTATION_PROMPT.md  LICENSE  README.md  TDD.md  TEST_COVERAGE_ANALYSIS.md  action.yml  cobertura.xml  cog.toml  deny.toml  hooks.tgz  install.sh  release-please-config.json  schema.yaml
.cargo/: audit.toml
.common-repo/: action-validator-step.yml  release-rust-toolchain.yml
.config/: nextest.toml
.cursor/rules/: 001-context.mdc  001-project-overview.mdc  002-rust-development.mdc  003-documentation.mdc  004-context-files.mdc  005-commit-workflow.mdc
.github/workflows/: auto-merge.yml  benchmark.yml  ci.yaml  ci.yml  commitlint.yml  docs.yml  pre-commit.yaml  release-binaries.yaml  release-please.yml  release.yaml  release.yml  test-action.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  (+5 more)
benches/: config_parsing.rs  filesystem_ops.rs  operators.rs
context/: add-command.json  agent-docs-improvement-plan.md  agent-docs-improvement-tasks.json  ai-writing-patterns.md  architecture-review.json  ci-coverage-consolidation.json  cicd-review.json  cleanup-post-local-fs-repos.json  cli-design.md  cli-implementation-plan.md  cli-stub-implementation.md  cli-testing-strategy.md  cli-ux-review.json  community-review.json  configuration-docs.json  context-cleanup.json  cr-alias.json  current-task-stash1.json  current-task.json  design.md  distribution-review.json  document-implemented-features.json  documentation-fixes-plan.json  documentation-review.json  evaluation-checklist.md  expected-fixture-convention.md  feature-status.json  github-action-impl-plan.json  github-action-plan.md  implementation-plan.md  implementation-progress.md  improving-test-coverage-plan.json  improving-test-coverage-plan.md  inheritance-merge-e2e.json  init-apply-bug-fix-plan.json  init-apply-bug-plan.json  init-redesign.json  ls-exclude-bug.json  master-plan.json  merge-operator-testing-guide.md  (+37 more)
docs/: alignment-summary.md  book.toml  cli-testing-strategy.md  commonrepo-v1-schema.yml  configuration.md  design.md  getting-started.md  implementation-plan.md  implementation-progress.md  improving-test-coverage-plan.md  recipes.md  troubleshooting.md
examples/: repository_usage.rs
script/: bootstrap  ci  cibuild  install-cargo-binstall  setup  test  test-install-alias  update
scripts/: dev-setup.sh
spec/: common-repo.allium
src/: cache.rs  cli.rs  config.rs  defaults.rs  error.rs  filesystem.rs  git.rs  lib.rs  main.rs  operators.rs  output.rs  path.rs  path_proptest.rs  phases.rs  repository.rs  suggestions.rs  version.rs
tests/: cli_e2e_add.rs  cli_e2e_apply.rs  cli_e2e_cache.rs  cli_e2e_check.rs  cli_e2e_completions.rs  cli_e2e_defer.rs  cli_e2e_diff.rs  cli_e2e_dotfiles.rs  cli_e2e_exit_codes.rs  cli_e2e_expected_fixture.rs  cli_e2e_if_exists.rs  cli_e2e_include_additive_simple.rs  cli_e2e_info.rs  cli_e2e_inheritance_merge.rs  cli_e2e_ini_merge.rs  cli_e2e_init.rs  cli_e2e_init_interactive.rs  cli_e2e_json_merge.rs  cli_e2e_local_fs_repos.rs  cli_e2e_ls.rs  cli_e2e_ls_filtering.rs  cli_e2e_markdown_merge.rs  cli_e2e_repo_in_sequence.rs  cli_e2e_sequential_ops.rs  cli_e2e_source_ops.rs  cli_e2e_source_sequential.rs  cli_e2e_three_tier_merge.rs  cli_e2e_toml_merge.rs  cli_e2e_tree.rs  cli_e2e_tty.rs  cli_e2e_update.rs  cli_e2e_upstream_ops.rs  cli_e2e_validate.rs  cli_e2e_yaml_merge.rs  cli_snapshot_tests.rs  ini_merge_integration.rs  integration_merge_common.rs  integration_merge_ini.rs  integration_merge_json.rs  integration_merge_markdown.rs  (+6 more)
xtask/: Cargo.toml
xtask/src/: check_prose.rs  main.rs
(+247 files in other folders)
