[workspace]
members = [".", "xtask"]

[package]
name = "common-repo"
version = "0.26.1"
edition = "2021"
rust-version = "1.85.0"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
taplo = "0.9"
pulldown-cmark = "0.10"
glob = "0.3"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"
semver = "1.0"
walkdir = "2.5"
rust-ini = "0.21.3"
dirs = "5.0"
rayon = "1.10"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
log = "0.4"
env_logger = "0.11"
ptree = "0.4"

[dev-dependencies]
tempfile = "3.0"
datatest-stable = "0.1"
serial_test = "3.0"
insta = { version = "1.41", features = ["yaml"] }
proptest = "1.5"
# CLI E2E testing dependencies
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
rexpect = "0.6.2"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[features]
integration-tests = []

[[bin]]
name = "common-repo"
path = "src/main.rs"

[[test]]
name = "schema_parsing_test"
harness = false

# Benchmarks
[[bench]]
name = "config_parsing"
harness = false

[[bench]]
name = "filesystem_ops"
harness = false

[[bench]]
name = "operators"
harness = false

# Optimize release builds for performance
[profile.release]
lto = true          # Link-time optimization for better performance
codegen-units = 1   # Single codegen unit for maximum optimization
strip = true        # Strip symbols for smaller binaries
