[package]
name = "xtask"
version = "0.26.0"
edition = "2021"
rust-version = "1.85.0"
description = "Development automation tasks for common-repo"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
